--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ body{
 
 /* Header: logo left, title/tagline centered */
 header{
+  position:relative; /* needed for car/trail */
   display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px;
   padding:12px 0 22px; border-bottom:1px solid var(--line)
 }
@@ -218,7 +219,65 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 .chip a{color:#cfe6ff; text-decoration:none}
 .chip a:hover{text-decoration:underline}
 
-/* Responsive */
+/* ===== F1 CAR & MONEY TRAIL ===== */
+.f1-car{
+  position:absolute;
+  left:-140px;              /* off-screen start */
+  bottom:-11px;             /* rides the 1px border */
+  width:72px;
+  filter: drop-shadow(0 6px 14px rgba(17,177,255,.25));
+  pointer-events:none;
+  opacity:0;
+}
+.f1-car.go{
+  animation: f1-drive 2.5s cubic-bezier(.25,.85,.3,1) forwards;
+  opacity:1;
+}
+@keyframes f1-drive{
+  0%   { left:-140px }
+  100% { left:calc(100% + 220px) }
+}
+.f1-coin, .f1-bill{
+  position:absolute;
+  bottom:-10px;
+  width:12px; height:12px;
+  pointer-events:none; opacity:.98;
+  will-change:transform, opacity;
+}
+.f1-coin{
+  border-radius:50%;
+  background:
+    radial-gradient(circle at 30% 28%, rgba(255,255,255,.85), rgba(255,255,255,0) 40%),
+    radial-gradient(circle, #ffd700 0 62%, #caa400 63% 100%);
+  box-shadow:0 0 10px rgba(255,215,0,.55);
+  animation: coin-pop 1.2s ease-out forwards;
+}
+.f1-bill{
+  width:16px; height:10px; border-radius:3px;
+  background:
+    radial-gradient(circle at 30% 50%, rgba(255,255,255,.7), transparent 45%),
+    linear-gradient(180deg, #38e27a, #16c06a);
+  border:1px solid rgba(0,0,0,.18);
+  box-shadow:0 0 10px rgba(56,226,122,.4);
+  transform-origin:50% 50%;
+  animation: bill-float 1.2s ease-out forwards;
+}
+@keyframes coin-pop{
+  0%   { transform: translateY(0) scale(.9) rotate(0deg); opacity:.98; }
+  100% { transform: translateY(-22px) scale(1) rotate(220deg); opacity:0; filter:blur(.4px); }
+}
+@keyframes bill-float{
+  0%   { transform: translateY(0) rotate(0deg); opacity:.95; }
+  100% { transform: translateY(-28px) rotate(-18deg); opacity:0; filter:blur(.5px); }
+}
+
+/* Respect reduced motion */
+@media (prefers-reduced-motion: reduce){
+  .f1-car.go{ animation-duration:0.01ms; animation-iteration-count:1 }
+  .f1-coin, .f1-bill{ animation:none; opacity:0 }
+}
+
+/* Responsive tweaks */
 @media (max-width:960px){
   .wrap{padding:16px}
   header{grid-template-columns:auto 1fr auto}
@@ -273,6 +332,20 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
           <p>Simple Business Funding</p>
         </div>
         <div class="header-right"></div>
+
+        <!-- F1 car (rides the header border) -->
+        <div class="f1-car" id="f1" aria-hidden="true">
+          <svg viewBox="0 0 120 42" width="120" height="42" fill="none" aria-hidden="true">
+            <rect x="2" y="10" width="16" height="10" rx="2" fill="#89d8ff" opacity=".8"/>
+            <path d="M15 18 L55 18 L70 10 L92 10 L110 18 L118 22 L110 26 L92 26 L70 22 L55 26 L15 26 Z"
+                  fill="#11b1ff" stroke="#6ee7ff" stroke-width="1.5"/>
+            <path d="M64 14 q6 0 10 4 q-4 4 -10 4 q-6 0 -10 -4 q4 -4 10 -4Z" fill="#0e2747"/>
+            <circle cx="32" cy="32" r="8" fill="#0b1220" stroke="#a8dfff" stroke-width="2"/>
+            <circle cx="95" cy="32" r="8" fill="#0b1220" stroke="#a8dfff" stroke-width="2"/>
+            <circle cx="32" cy="29" r="2" fill="#a8dfff"/>
+            <circle cx="95" cy="29" r="2" fill="#a8dfff"/>
+          </svg>
+        </div>
       </header>
 
       <main>
@@ -303,7 +376,7 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
           </div>
           <div class="row">
             <span class="label"><span class="icon" aria-hidden="true">
-              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1 .3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
             </span> Phone</span>
             <span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span>
           </div>
@@ -361,11 +434,58 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
     setTimeout(function(){ veil.remove(); }, 1100);
   }
 
+  // === F1 run & money trail ===
+  function startF1Run(){
+    var header = document.querySelector('header');
+    var car = document.getElementById('f1');
+    if (!header || !car) return;
+
+    // kick off the drive
+    car.classList.remove('go'); void car.offsetWidth; car.classList.add('go');
+
+    var DURATION = 2500;            // total trip
+    var start = performance.now();
+    var lastSpawn = 0;
+    var SPACING_MS = 90;            // how often to drop pieces
+    var COIN_CHANCE = 0.7;          // else bill
+
+    function spawn(x){
+      var piece;
+      if (Math.random() < COIN_CHANCE){
+        piece = document.createElement('span'); piece.className='f1-coin';
+      }else{
+        piece = document.createElement('span'); piece.className='f1-bill';
+      }
+      piece.style.left = x + 'px';
+      piece.style.bottom = (-10 + (Math.random()*4 - 2)) + 'px';
+      header.appendChild(piece);
+      setTimeout(function(){ piece.remove(); }, 1400);
+    }
+
+    function step(now){
+      var t = now - start;
+      if (t - lastSpawn >= SPACING_MS){
+        var carBox = car.getBoundingClientRect();
+        var headerBox = header.getBoundingClientRect();
+        var x = Math.min(Math.max(0, carBox.left - headerBox.left + 20), headerBox.width);
+        spawn(x);
+        lastSpawn = t;
+      }
+      if (t < DURATION){ requestAnimationFrame(step); }
+    }
+    requestAnimationFrame(step);
+  }
+
   function revealPage(){
     document.body.classList.add('page-on');
     splash.classList.add('is-fading');
     splash.addEventListener('transitionend', function onEnd(e){
-      if (e.propertyName === 'opacity'){ splash.removeEventListener('transitionend', onEnd); splash.classList.add('is-hidden'); }
+      if (e.propertyName === 'opacity'){
+        splash.removeEventListener('transitionend', onEnd);
+        splash.classList.add('is-hidden');
+        splash.remove();      // *** remove splash entirely to avoid any lingering rectangle/glow ***
+        startF1Run();         // fire the F1 show once the page is visible
+      }
     });
   }
 
@@ -416,3 +536,4 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 </script>
 </body>
 </html>
+
